Tue Dec  9 12:27:54 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/validation/QualityProcedureFactory.java:
	New class.

Thu Dec  4 20:47:46 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos2d/Insertion.java: Modify constructor
	to allow decoupling minimal and maximal edge length.

Mon Nov 24 11:27:21 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/projection/Sphere.java: New class to
	generate a regular mesh on a sphere.  This geometry will be
	needed to test surface projection.

Thu Nov 20 16:55:29 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/projection/MeshLiaison.java: New class to
	start work on remeshing.  MeshLiaison takes a background mesh as
	input and clones it.  The new mesh can then be modified while
	vertices are projected onto background mesh.
	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3DBg.java: 3D smoothing
	based on MeshLiaison.

Thu Nov 20 14:01:56 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/Mesh.java: In buildAdjacency(), ensure
	that boundary nodes have a non-null ref1d member.

Wed Nov 19 12:02:24 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/metrics/Matrix3D.java: New distance2()
	static method to compute squared distance between 2 points.
	* src/org/jcae/mesh/amibe/projection/LocalSurfaceProjection.java:
	New interface to implement surface approximation.
	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java
	  src/org/jcae/mesh/amibe/algos3d/SplitEdge.java
	  src/org/jcae/mesh/amibe/ds/Vertex.java:  Move surface approximation
	by quadrics from Vertex and SmoothNodes3D...
	* src/org/jcae/mesh/amibe/projection/QuadricProjection.java: ...here.

Wed Nov 19 11:47:37 CET 2008 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/SmoothNodes3D.java: Fix centroid